--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>The HTML5 Herald</title>
+    <title>Start</title>
     <meta name="description" content="Startpage">
     <meta name="author" content="DERPSQUID9">
 
