Added heading, search box, and some CSS styling.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Start</title>
+    <title>Welcome Page</title>
     <meta name="description" content="Startpage">
     <meta name="author" content="DERPSQUID9">
 
@@ -13,6 +13,7 @@
 </head>
 
 <body>
-    <!--script src="js/scripts.js"></script-->
+    <h1>Welcome</h1>
+    <iframe class="search-bar" src="https://duckduckgo.com/search.html?prefill=Search DuckDuckGo" frameborder="0"></iframe>
 </body>
 </html>
