Changed the header font to a webfont that is hosted by Font Library, which seems to work. Also have a decent minimal header bar set up.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
     <meta name="author" content="DERPSQUID9">
 
     <link rel="stylesheet" href="css/style.css">
+    <!-- Web Fonts  -->
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/airborne" type="text/css"/>
+
 </head>
 
 <body>
-    <h1>Welcome</h1>
-    <iframe class="search-bar" src="https://duckduckgo.com/search.html?prefill=Search DuckDuckGo" frameborder="0"></iframe>
+    <div class="header">
+        <h1>WELCOME BACK</h1>
+        <iframe class="search-bar" src="https://duckduckgo.com/search.html?prefill=Search DuckDuckGo" frameborder="0"></iframe>
+    </div>
 </body>
 </html>
