Added a div to make up the space below the header. Made both divs flexboxes. Minor style tweaks and a good amount of code cleanup.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Welcome Page</title>
+    <title>Welcome Back</title>
     <meta name="description" content="Startpage">
     <meta name="author" content="DERPSQUID9">
 
@@ -16,8 +16,10 @@
 
 <body>
     <div class="header">
-        <h1>WELCOME BACK</h1>
+        <h1 class="title">WELCOME BACK</h1>
         <iframe class="search-bar" src="https://duckduckgo.com/search.html?prefill=Search DuckDuckGo" frameborder="0"></iframe>
+    </div>
+    <div class="menu">
     </div>
 </body>
 </html>
