Added viewport meta tag to enhance usability on mobile devices.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Welcome Back</title>
     <meta name="description" content="Startpage">
     <meta name="author" content="DERPSQUID9">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/style.css">
     <!-- Web Fonts  -->
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/airborne" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/airborne">
 
 </head>
 
