Added Font Awesome.

--- a/index.html
+++ b/index.html
@@ -10,17 +10,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/style.css">
+
     <!-- Web Fonts  -->
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/airborne">
+    <!-- Font Awesome kit -->
 
+    <script src="https://kit.fontawesome.com/b65147df84.js"></script>
 </head>
 
 <body>
     <div class="header">
+
         <h1 class="title">WELCOME BACK</h1>
+
         <iframe class="search-bar" src="https://duckduckgo.com/search.html?prefill=Search DuckDuckGo" frameborder="0"></iframe>
+
     </div>
     <div class="menu">
+
+        <div>
+            <!--span class="fab fa-reddit"></span-->
+        </div>
+        
     </div>
 </body>
 </html>
