Added links in the menu, with some being hidden on mobile.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Welcome Back</title>
+    <title>New Tab</title>
     <meta name="description" content="Startpage">
     <meta name="author" content="DERPSQUID9">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,12 +13,15 @@
 
     <!-- Web Fonts  -->
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/airborne">
-    <!-- Font Awesome kit -->
 
+    <!-- Font Awesome icons -->
     <script src="https://kit.fontawesome.com/b65147df84.js"></script>
+    
 </head>
 
 <body>
+
+    <!-- The header bar. -->
     <div class="header">
 
         <h1 class="title">WELCOME BACK</h1>
@@ -26,12 +29,82 @@
         <iframe class="search-bar" src="https://duckduckgo.com/search.html?prefill=Search DuckDuckGo" frameborder="0"></iframe>
 
     </div>
+
+    <!-- The main section. Takes up most of the screen. -->
+    <!-- Currently with links in alphabetic order. -->
     <div class="menu">
 
-        <div>
-            <!--span class="fab fa-reddit"></span-->
-        </div>
-        
+        <!-- Bandcamp Link -->
+        <a class="menu-item" href="https://www.bandcamp.com">
+            <div>
+                <span class="fab fa-bandcamp"></span>
+            </div>
+        </a>
+
+        <!-- Discord Link -->
+        <a class="menu-item" href="https://www.discord.gg">
+            <div>
+                <span class="fab fa-discord"></span>
+            </div>
+        </a>
+
+        <!-- Firefox Addons Link -->
+        <a class="menu-item" href="https://addons.mozilla.org">
+            <div>
+                <span class="fab fa-firefox"></span>
+            </div>
+        </a>
+
+        <!-- Github Link -->
+        <a class="menu-item" href="https://www.github.com">
+            <div>
+                <span class="fab fa-github"></span>
+            </div>
+        </a>
+
+        <!-- Kickstarter Link -->
+        <a class="menu-item" href="https://www.kickstarter.com">
+            <div>
+                <span class="fab fa-kickstarter-k"></span>
+            </div>
+        </a>
+
+        <!-- Protonmail Link -->
+        <a class="menu-item" href="https://www.protonmail.com">
+            <div>
+                <span class="fas fa-envelope"></span>
+            </div>
+        </a>
+
+        <!-- Reddit Link -->
+        <a class="menu-item" href="https://www.reddit.com">
+            <div>
+                <span class="fab fa-reddit"></span>
+            </div>
+        </a>
+ 
+        <!-- Soundcloud Link -->
+        <a class="menu-item" href="https://www.soundcloud.com">
+            <div>
+                <span class="fab fa-soundcloud"></span>
+            </div>
+        </a>
+
+        <!-- Youtube Link -->
+        <a class="menu-item" href="https://www.youtube.com">
+            <div>
+                <span class="fab fa-youtube"></span>
+            </div>
+        </a>
+
+        <!-- Wikipedia Link -->
+        <a class="menu-item" href="https://www.wikipedia.org">
+            <div>
+                <span class="fab fa-wikipedia-w"></span>
+            </div>
+        </a>
+
     </div>
+
 </body>
 </html>
