Added Stack Overflow icon. Removed Bandcamp icon from mobile. Changed size of icons in landscape mode on mobile.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/airborne">
 
     <!-- Font Awesome icons -->
+    <!-- The source of the icons in the boxes -->
     <script src="https://kit.fontawesome.com/b65147df84.js"></script>
     
 </head>
@@ -87,6 +88,13 @@
         <a class="menu-item" href="https://www.soundcloud.com">
             <div>
                 <span class="fab fa-soundcloud"></span>
+            </div>
+        </a>
+
+        <!-- Stack Overflow Link -->
+        <a class ="menu-item" href="https://stackoverflow.com">
+            <div>
+                <span class="fab fa-stack-overflow"></span>
             </div>
         </a>
 
