Replaced Font Awesome icons with Fork Awesome icons, replaced Kickstarter link with Internet Archive link, and minor icon sizing changes.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <!-- Web Fonts  -->
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/airborne">
 
-    <!-- Font Awesome icons -->
+    <!-- Fork Awesome icons -->
     <!-- The source of the icons in the boxes -->
-    <script src="https://kit.fontawesome.com/b65147df84.js"></script>
-    
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -36,79 +36,79 @@
     <div class="menu">
 
         <!-- Bandcamp Link -->
-        <a class="menu-item" href="https://www.bandcamp.com">
+        <a class="menu-item" href="https://www.bandcamp.com" aria-label="Bandcamp">
             <div>
-                <span class="fab fa-bandcamp"></span>
+				<i class="fa fa-bandcamp" aria-hidden="true" title="Go to Bandcamp"></i>
             </div>
         </a>
 
         <!-- Discord Link -->
-        <a class="menu-item" href="https://www.discord.gg">
+        <a class="menu-item" href="https://www.discord.gg" aria-label="Discord">
             <div>
-                <span class="fab fa-discord"></span>
+				<i class="fa fa-discord" aria-hidden="true" title="Go to Discord"></i>
             </div>
         </a>
 
         <!-- Firefox Addons Link -->
-        <a class="menu-item" href="https://addons.mozilla.org">
+        <a class="menu-item" href="https://addons.mozilla.org" aria-label="Firefox Addons">
             <div>
-                <span class="fab fa-firefox"></span>
+				<i class="fa fa-firefox" aria-hidden="true" title="Go to Firefox Addons"></i>
             </div>
         </a>
 
         <!-- Github Link -->
-        <a class="menu-item" href="https://www.github.com">
+        <a class="menu-item" href="https://www.github.com" aria-label="Github">
             <div>
-                <span class="fab fa-github"></span>
+				<i class="fa fa-github" aria-hidden="true" title="Go to Github"></i>
             </div>
         </a>
 
-        <!-- Kickstarter Link -->
-        <a class="menu-item" href="https://www.kickstarter.com">
+		<!-- Internet Archive Link -->
+        <a class="menu-item" href="https://archive.org" aria-label="Internet Archive">
             <div>
-                <span class="fab fa-kickstarter-k"></span>
+				<i class="fa fa-archive-org" aria-hidden="true" title="Go to Internet Archive"></i>
             </div>
         </a>
 
         <!-- Protonmail Link -->
-        <a class="menu-item" href="https://www.protonmail.com">
+        <a class="menu-item" href="https://www.protonmail.com" aria-label="Protonmail">
             <div>
-                <span class="fas fa-envelope"></span>
+				<i class="fa fa-envelope" aria-hidden="true" title="Go to Protonmail"></i>
             </div>
         </a>
 
         <!-- Reddit Link -->
-        <a class="menu-item" href="https://www.reddit.com">
+        <a class="menu-item" href="https://www.reddit.com" aria-label="Reddit">
             <div>
-                <span class="fab fa-reddit"></span>
+				<i class="fa fa-reddit" aria-hidden="true" title="Go to Reddit"></i>
             </div>
         </a>
- 
+
         <!-- Soundcloud Link -->
-        <a class="menu-item" href="https://www.soundcloud.com">
+        <a class="menu-item" href="https://www.soundcloud.com" aria-label="Soundcloud">
             <div>
-                <span class="fab fa-soundcloud"></span>
+				<i class="fa fa-soundcloud" aria-hidden="true" title="Go to Soundcloud"></i>
             </div>
         </a>
 
         <!-- Stack Overflow Link -->
-        <a class ="menu-item" href="https://stackoverflow.com">
+        <a class ="menu-item" href="https://stackoverflow.com" aria-label="Stack Overflow">
             <div>
-                <span class="fab fa-stack-overflow"></span>
+				<i class="fa fa-stack-overflow" aria-hidden="true" title="Go to Stack Overflow"></i>
             </div>
         </a>
 
         <!-- Youtube Link -->
-        <a class="menu-item" href="https://www.youtube.com">
+        <a class="menu-item" href="https://www.youtube.com" aria-label="YouTube">
             <div>
-                <span class="fab fa-youtube"></span>
+				<i class="fa fa-youtube-play" aria-hidden="true" title="Go to YouTube"></i>
             </div>
         </a>
 
         <!-- Wikipedia Link -->
-        <a class="menu-item" href="https://www.wikipedia.org">
+        <a class="menu-item" href="https://www.wikipedia.org" aria-label="Wikipedia">
             <div>
-                <span class="fab fa-wikipedia-w"></span>
+				<i class="fa fa-wikipedia-w" aria-hidden="true" title="Go to Wikipedia"></i>
             </div>
         </a>
 
