The tooltip for each link is now for the entire box, not just the icon.

--- a/index.html
+++ b/index.html
@@ -2,117 +2,117 @@
 
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+	<meta charset="utf-8">
 
-    <title>New Tab</title>
-    <meta name="description" content="Startpage">
-    <meta name="author" content="DERPSQUID9">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>New Tab</title>
+	<meta name="description" content="Startpage">
+	<meta name="author" content="DERPSQUID9">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 
-    <!-- Web Fonts  -->
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/airborne">
+	<!-- Web Fonts  -->
+	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/airborne">
 
-    <!-- Fork Awesome icons -->
-    <!-- The source of the icons in the boxes -->
+	<!-- Fork Awesome icons
+		The source of the icons in the boxes -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
 
 </head>
 
 <body>
 
-    <!-- The header bar. -->
-    <div class="header">
+	<!-- The header bar. -->
+	<div class="header">
 
-        <h1 class="title">WELCOME BACK</h1>
+		<h1 class="title">WELCOME BACK</h1>
 
-        <iframe class="search-bar" src="https://duckduckgo.com/search.html?prefill=Search DuckDuckGo" frameborder="0"></iframe>
+		<iframe class="search-bar" src="https://duckduckgo.com/search.html?prefill=Search DuckDuckGo" frameborder="0"></iframe>
 
-    </div>
+	</div>
 
-    <!-- The main section. Takes up most of the screen. -->
-    <!-- Currently with links in alphabetic order. -->
-    <div class="menu">
+	<!-- The main section. Takes up most of the screen.
+		Currently with links in alphabetic order. -->
+	<div class="menu">
 
-        <!-- Bandcamp Link -->
-        <a class="menu-item" href="https://www.bandcamp.com" aria-label="Bandcamp">
-            <div>
-				<i class="fa fa-bandcamp" aria-hidden="true" title="Go to Bandcamp"></i>
-            </div>
-        </a>
+		<!-- Bandcamp Link -->
+		<a class="menu-item" href="https://www.bandcamp.com" aria-label="Bandcamp" title="Go to Bandcamp">
+			<div>
+				<i class="fa fa-bandcamp" aria-hidden="true"></i>
+			</div>
+		</a>
 
-        <!-- Discord Link -->
-        <a class="menu-item" href="https://www.discord.gg" aria-label="Discord">
-            <div>
-				<i class="fa fa-discord" aria-hidden="true" title="Go to Discord"></i>
-            </div>
-        </a>
+		<!-- Discord Link -->
+		<a class="menu-item" href="https://www.discord.gg" aria-label="Discord" title="Go to Discord">
+			<div>
+				<i class="fa fa-discord" aria-hidden="true"></i>
+			</div>
+		</a>
 
-        <!-- Firefox Addons Link -->
-        <a class="menu-item" href="https://addons.mozilla.org" aria-label="Firefox Addons">
-            <div>
-				<i class="fa fa-firefox" aria-hidden="true" title="Go to Firefox Addons"></i>
-            </div>
-        </a>
+		<!-- Firefox Addons Link -->
+		<a class="menu-item" href="https://addons.mozilla.org" aria-label="Firefox Addons" title="Go to Firefox Addons">
+			<div>
+				<i class="fa fa-firefox" aria-hidden="true"></i>
+			</div>
+		</a>
 
-        <!-- Github Link -->
-        <a class="menu-item" href="https://www.github.com" aria-label="Github">
-            <div>
-				<i class="fa fa-github" aria-hidden="true" title="Go to Github"></i>
-            </div>
-        </a>
+		<!-- Github Link -->
+		<a class="menu-item" href="https://www.github.com" aria-label="Github" title="Go to Github">
+			<div>
+				<i class="fa fa-github" aria-hidden="true"></i>
+			</div>
+		</a>
 
 		<!-- Internet Archive Link -->
-        <a class="menu-item" href="https://archive.org" aria-label="Internet Archive">
-            <div>
-				<i class="fa fa-archive-org" aria-hidden="true" title="Go to Internet Archive"></i>
-            </div>
-        </a>
+		<a class="menu-item" href="https://archive.org" aria-label="Internet Archive" title="Go to Internet Archive">
+			<div>
+				<i class="fa fa-archive-org" aria-hidden="true"></i>
+			</div>
+		</a>
 
-        <!-- Protonmail Link -->
-        <a class="menu-item" href="https://www.protonmail.com" aria-label="Protonmail">
-            <div>
-				<i class="fa fa-envelope" aria-hidden="true" title="Go to Protonmail"></i>
-            </div>
-        </a>
+		<!-- Protonmail Link -->
+		<a class="menu-item" href="https://www.protonmail.com" aria-label="Protonmail" title="Go to Protonmail">
+			<div>
+				<i class="fa fa-envelope" aria-hidden="true"></i>
+			</div>
+		</a>
 
-        <!-- Reddit Link -->
-        <a class="menu-item" href="https://www.reddit.com" aria-label="Reddit">
-            <div>
-				<i class="fa fa-reddit" aria-hidden="true" title="Go to Reddit"></i>
-            </div>
-        </a>
+		<!-- Reddit Link -->
+		<a class="menu-item" href="https://www.reddit.com" aria-label="Reddit" title="Go to Reddit">
+			<div>
+				<i class="fa fa-reddit" aria-hidden="true"></i>
+			</div>
+		</a>
 
-        <!-- Soundcloud Link -->
-        <a class="menu-item" href="https://www.soundcloud.com" aria-label="Soundcloud">
-            <div>
-				<i class="fa fa-soundcloud" aria-hidden="true" title="Go to Soundcloud"></i>
-            </div>
-        </a>
+		<!-- Soundcloud Link -->
+		<a class="menu-item" href="https://www.soundcloud.com" aria-label="Soundcloud" title="Go to Soundcloud">
+			<div>
+				<i class="fa fa-soundcloud" aria-hidden="true"></i>
+			</div>
+		</a>
 
-        <!-- Stack Overflow Link -->
-        <a class ="menu-item" href="https://stackoverflow.com" aria-label="Stack Overflow">
-            <div>
-				<i class="fa fa-stack-overflow" aria-hidden="true" title="Go to Stack Overflow"></i>
-            </div>
-        </a>
+		<!-- Stack Overflow Link -->
+		<a class="menu-item" href="https://stackoverflow.com" aria-label="Stack Overflow" title="Go to Stack Overflow">
+			<div>
+				<i class="fa fa-stack-overflow" aria-hidden="true"></i>
+			</div>
+		</a>
 
-        <!-- Youtube Link -->
-        <a class="menu-item" href="https://www.youtube.com" aria-label="YouTube">
-            <div>
-				<i class="fa fa-youtube-play" aria-hidden="true" title="Go to YouTube"></i>
-            </div>
-        </a>
+		<!-- Wikiwand Link -->
+		<a class="menu-item" href="https://www.wikiwand.com" aria-label="Wikiwand" title="Go to Wikiwand">
+			<div>
+				<i class="fa fa-wikipedia-w" aria-hidden="true"></i>
+			</div>
+		</a>
 
-        <!-- Wikipedia Link -->
-        <a class="menu-item" href="https://www.wikipedia.org" aria-label="Wikipedia">
-            <div>
-				<i class="fa fa-wikipedia-w" aria-hidden="true" title="Go to Wikipedia"></i>
-            </div>
-        </a>
+		<!-- Youtube Link -->
+		<a class="menu-item" href="https://www.youtube.com" aria-label="YouTube" title="Go to YouTube">
+			<div>
+				<i class="fa fa-youtube-play" aria-hidden="true"></i>
+			</div>
+		</a>
 
-    </div>
+	</div>
 
 </body>
 </html>
