Link for Wikiwand now goes to wikiwand.com.news.

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 		</a>
 
 		<!-- Wikiwand Link -->
-		<a class="menu-item" href="https://www.wikiwand.com" aria-label="Wikiwand" title="Go to Wikiwand">
+		<a class="menu-item" href="https://www.wikiwand.com/news" aria-label="Wikiwand" title="Go to Wikiwand">
 			<div>
 				<i class="fa fa-wikipedia-w" aria-hidden="true"></i>
 			</div>
