Added title attribute to search bar for accessibility.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 		<h1 class="title">WELCOME BACK</h1>
 
-		<iframe class="search-bar" src="https://duckduckgo.com/search.html?prefill=Search DuckDuckGo" frameborder="0"></iframe>
+		<iframe class="search-bar" src="https://duckduckgo.com/search.html?prefill=Search DuckDuckGo" frameborder="0" title="Search DuckDuckGo"></iframe>
 
 	</div>
 
