Link to ProtonMail takes you to the login page, not the main page now.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		</a>
 
 		<!-- Protonmail Link -->
-		<a class="menu-item" href="https://www.protonmail.com" aria-label="Protonmail" title="Go to Protonmail">
+		<a class="menu-item" href="https://mail.protonmail.com/login" aria-label="Protonmail" title="Go to Protonmail">
 			<div>
 				<i class="fa fa-envelope" aria-hidden="true"></i>
 			</div>
