Changed discord link to https://www.discordapp.com/channels/@me so that it takes you directly to your friends page.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</a>
 
 		<!-- Discord Link -->
-		<a class="menu-item" href="https://www.discord.gg" aria-label="Discord" title="Go to Discord">
+		<a class="menu-item" href="https://discordapp.com/channels/@me" aria-label="Discord" title="Go to Discord">
 			<div>
 				<i class="fa fa-discord" aria-hidden="true"></i>
 			</div>
