Replaced Youtube link with Invideous link. Put Invideous link between Internet Archive and Protonmail to maintain alphabetical order.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
 	<meta charset="utf-8">
 
@@ -21,16 +22,11 @@
 </head>
 
 <body>
-
 	<!-- The header bar. -->
 	<div class="header">
-
 		<h1 class="title">WELCOME BACK</h1>
-
 		<iframe class="search-bar" src="https://duckduckgo.com/search.html?prefill=Search DuckDuckGo" frameborder="0" title="Search DuckDuckGo"></iframe>
-
 	</div>
-
 	<!-- The main section. Takes up most of the screen.
 		Currently with links in alphabetic order. -->
 	<div class="menu">
@@ -70,6 +66,13 @@
 			</div>
 		</a>
 
+		<!-- Invidious Link -->
+		<a class="menu-item" href="https://invidio.us" aria-label="Invidious" title="Go to Invidious" >
+			<div>
+				<i class="fa fa-play-circle" aria-hidden="true"></i>
+			</div>
+		</a>
+
 		<!-- Protonmail Link -->
 		<a class="menu-item" href="https://mail.protonmail.com/login" aria-label="Protonmail" title="Go to Protonmail">
 			<div>
@@ -104,15 +107,6 @@
 				<i class="fa fa-wikipedia-w" aria-hidden="true"></i>
 			</div>
 		</a>
-
-		<!-- Youtube Link -->
-		<a class="menu-item" href="https://www.youtube.com" aria-label="YouTube" title="Go to YouTube">
-			<div>
-				<i class="fa fa-youtube-play" aria-hidden="true"></i>
-			</div>
-		</a>
-
 	</div>
-
 </body>
 </html>
