--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</a>
 
 		<!-- Discord Link -->
-		<a class="menu-item" href="https://discordapp.com/channels/@me" aria-label="Discord" title="Go to Discord">
+		<a class="menu-item" href="https://discord.com/channels/@me" aria-label="Discord" title="Go to Discord">
 			<div>
 				<i class="fa fa-discord" aria-hidden="true"></i>
 			</div>
